# gbpinc.org-business-directory

./: .gitignore  setup.cfg
gbpdirgen/: __init__.py
gbpdirgen/templates/: categories.html  directory.html  listings.html
