[metadata]
name = gbpdirgen
version = 0.2.0

[options]
packages = gbpdirgen
install_requires = 
  google-api-python-client
  google-auth-httplib2
  google-auth-oauthlib
  ipdb
  Jinja2
  minify_html

[options.package_data]
* = templates/*.html

[options.entry_points]
console_scripts =
  gbpdirgen = gbpdirgen:main

[flake8]
max-line-length = 119
